--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@babel/polyfill": "^7.4.3",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
+        "@material-ui/core": "^4.11.3",
         "@testing-library/react": "^11.2.2",
         "aws-sdk": "^2.815.0",
         "axios": "^0.21.1",
@@ -37,6 +38,7 @@
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
         "multer": "^1.3.0",
+        "node-fetch": "^2.6.1",
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
